Add: armamec and blocky piratas

--- a/KiwiSite/index.html
+++ b/KiwiSite/index.html
@@ -34,43 +34,30 @@
       <article class="module module-third module-kiwi">
         <img src="images/9_pistas.jpeg">
         <div class="space">
-          <h2>9 9 pistas - Piensa rápido y descubre el misterio</h2>
+          <h2>9 pistas - Piensa rápido y descubre el misterio</h2>
 	  <p>Precio: $ 1.700<br>
 	  Entrega: Inmediata</p>
         </div>
       </article>
 
       <article class="module module-third module-kiwi">
-        <img src="images/">
+        <img src="images/arma_mec.jpeg">
         <div class="space">
-          <h2>Little Spotted</h2>
-          <p>Little Spotted Kiwis eat grubs and other small insects that are found underground, and occasionally eat berries. Hence the sharp talons and long beak, it digs into the ground with its talons then shoves its long beak down the soft ground.</p>
+          <h2>ARMAMEC CONECPT 8 - 230 piezas</h2>
+          <p>Precio: $ 5.000<br>
+          Entrega: Inmediata</p>
         </div>
       </article>
 
       <article class="module module-third module-kiwi">
-        <img src="images/">
+        <img src="images/blocky_piratas.jpeg">
         <div class="space">
-          <h2>North Island Brown</h2>
-          <p>Though Stewart Island brown kiwi emerge from their burrows to forage at dusk or on overcast days, the kiwi is a nocturnal bird. Kiwi, unlike other nocturnal birds, have poor vision — the eyes are small and the optic lobes of the brain very reduced.</p>
+          <h2>Blocky PIRATAS - 100 Pcs - 01-0637 </h2>
+          <p>Precio: $ 1.000<br>
+          Entrega: Inmediata</p>
         </div>
       </article>
 
-      <article class="module module-third module-kiwi">
-        <img src="images/">
-        <div class="space">
-          <h2>Rowi</h2>
-          <p>Otherwise known as Okarito Kiwi. The female can lay up to three eggs, each in a different nest. Both the male and the female incubate the eggs. The egg is very large, as it weighs 20% of the female's weight (as in all kiwis). Most pairs are monogamous throughout their lives.</p>
-        </div>
-      </article>
-
-      <article class="module module-third module-kiwi">
-        <img src="images/">
-        <div class="space">
-          <h2>Tokoeka</h2>
-          <p>Otherwise known as the Souther Brown Kiwi. It has no preen gland, and its feathers have no aftershafts and no barbules. There are large vibrissae around its gape, and it has no tail, only a pygostyle. It has a length of 45–55 cm (18–22 in) and the female weighs 2.1–3.9 kg (4.6–8.6 lb) and the male weighs 1.6–2.8 kg (3.5–6.2 lb)</p>
-        </div>
-      </article>
 
     </section>
 
