--- a/KiwiSite/index.html
+++ b/KiwiSite/index.html
@@ -43,7 +43,7 @@
       <article class="module module-third module-kiwi">
         <img src="images/arma_mec.jpeg">
         <div class="space">
-          <h2>ARMAMEC CONECPT 8 - 230 piezas</h2>
+          <h2>ARMAMEC CONCEPT 8 - 230 piezas</h2>
           <p>Precio: $ 5.000<br>
           Entrega: Inmediata</p>
         </div>
