Add El camarero

--- a/KiwiSite/index.html
+++ b/KiwiSite/index.html
@@ -52,12 +52,20 @@
       <article class="module module-third module-kiwi">
         <img src="images/blocky_piratas.jpeg">
         <div class="space">
-          <h2>Blocky PIRATAS - 100 Pcs - 01-0637 </h2>
+          <h2>Blocky PIRATAS - 100 Pcs - 01-0637</h2>
           <p>Precio: $ 1.000<br>
           Entrega: Inmediata</p>
         </div>
       </article>
 
+      <article class="module module-third module-kiwi">
+        <img src="images/camarero.jpeg">
+        <div class="space">
+          <h2>El CAMARERO - Un juego de Maldon</h2>
+          <p>Precio: $ 3.500<br>
+          Entrega: Inmediata</p>
+        </div>
+      </article>
 
     </section>
 
