Add Los chanchitos constructores

--- a/KiwiSite/index.html
+++ b/KiwiSite/index.html
@@ -52,7 +52,7 @@
       <article class="module module-third module-kiwi">
         <img src="images/blocky_piratas.jpeg">
         <div class="space">
-          <h2>Blocky PIRATAS - 100 Pcs - 01-0637</h2>
+          <h2>BLOCKY PIRATAS - 100 Pcs - 01-0637</h2>
           <p>Precio: $ 1.000<br>
           Entrega: Inmediata</p>
         </div>
@@ -61,8 +61,17 @@
       <article class="module module-third module-kiwi">
         <img src="images/camarero.jpeg">
         <div class="space">
-          <h2>El CAMARERO - Un juego de Maldon</h2>
+          <h2>EL CAMARERO - Un juego de Maldon</h2>
           <p>Precio: $ 3.500<br>
+          Entrega: Inmediata</p>
+        </div>
+      </article>
+
+      <article class="module module-third module-kiwi">
+        <img src="images/chanchitos.jpeg">
+        <div class="space">
+          <h2>LOS CHANCHITOS CONSTRUCTORES</h2>
+          <p>Precio: $ 2.500<br>
           Entrega: Inmediata</p>
         </div>
       </article>
