--- a/KiwiSite/index.html
+++ b/KiwiSite/index.html
@@ -76,6 +76,15 @@
         </div>
       </article>
 
+      <article class="module module-third module-kiwi">
+        <img src="images/lego_city.jpeg">
+        <div class="space">
+          <h2>LEGO CITY - Police - 80 piezas - Starter Set 60136 Building Kit</h2>
+          <p>Precio: $ 8.000<br>
+          Entrega: Inmediata</p>
+        </div>
+      </article>
+
     </section>
 
   </div>
