--- a/KiwiSite/index.html
+++ b/KiwiSite/index.html
@@ -85,6 +85,15 @@
         </div>
       </article>
 
+      <article class="module module-third module-kiwi">
+        <img src="images/te_conozco.jpeg">
+        <div class="space">
+          <h2>TE CONOZCO? - ¿cuales son tus verdaderos colores? - SELLADO - SIN USO</h2>
+          <p>Precio: $ 2.000<br>
+          Entrega: Inmediata</p>
+        </div>
+      </article>
+
     </section>
 
   </div>
