--- a/KiwiSite/index.html
+++ b/KiwiSite/index.html
@@ -96,6 +96,15 @@
 
     </section>
 
+      <article class="module module-third module-kiwi">
+        <img src="images/zanahorias.jpeg">
+        <div class="space">
+          <h2>ZANAHORIAS - Mi primer juego de suma y resta</h2>
+          <p>Precio: $ 1.000<br>
+          Entrega: Inmediata</p>
+        </div>
+      </article>
+
   </div>
 
   <footer class="site-footer">
