Add Plato Giratorio

--- a/KiwiSite/index.html
+++ b/KiwiSite/index.html
@@ -105,6 +105,15 @@
         </div>
       </article>
 
+      <article class="module module-third module-kiwi">
+        <img src="images/plato_giratorio.jpeg">
+        <div class="space">
+          <h2>PLATO DE PRESENTACION GIRATORIO PARA TORTA - 35cm</h2>
+          <p>Precio: $ 3.000<br>
+          Entrega: Inmediata</p>
+        </div>
+      </article>
+
   </div>
 
   <footer class="site-footer">
