--- a/KiwiSite/index.html
+++ b/KiwiSite/index.html
@@ -114,6 +114,33 @@
         </div>
       </article>
 
+      <article class="module module-third module-kiwi">
+        <img src="images/sandwichera.jpeg">
+        <div class="space">
+          <h2>SANDWICHERA PHILIPS - Con superficie antiadherente - 700w</h2>
+          <p>Precio: $ 4.000<br>
+          Entrega: Inmediata</p>
+        </div>
+      </article>
+
+      <article class="module module-third module-kiwi">
+        <img src="images/vajilla_china.jpeg">
+        <div class="space">
+          <h2>VAJILLA CHINA DE PORCELANA</h2>
+          <p>Precio: $ 5.000<br>
+          Entrega: Inmediata</p>
+        </div>
+      </article>
+
+      <article class="module module-third module-kiwi">
+        <img src="images/vasos_durax.jpeg">
+        <div class="space">
+          <h2>VASOS DURAX - 6 UNIDADES</h2>
+          <p>Precio: $ 1.000<br>
+          Entrega: Inmediata</p>
+        </div>
+      </article>
+
   </div>
 
   <footer class="site-footer">
