Improve price readability

--- a/KiwiSite/index.html
+++ b/KiwiSite/index.html
@@ -6,7 +6,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width">
 
-  <title>Kiwis of New Zealand</title>
+  <title>Venta</title>
 
   <script src="//use.typekit.net/exu3mfi.js"></script>
   <script>try{Typekit.load();}catch(e){}</script>
@@ -35,7 +35,7 @@
         <img src="images/9_pistas.jpeg">
         <div class="space">
           <h2>9 pistas - Piensa rápido y descubre el misterio</h2>
-	  <p>Precio: $ 1.700<br>
+	  <p>Precio: <b>$ 1.700</b><br>
 	  Entrega: Inmediata</p>
         </div>
       </article>
@@ -44,7 +44,7 @@
         <img src="images/arma_mec.jpeg">
         <div class="space">
           <h2>ARMAMEC CONCEPT 8 - 230 piezas</h2>
-          <p>Precio: $ 5.000<br>
+          <p>Precio: <b>$ 5.000</b><br>
           Entrega: Inmediata</p>
         </div>
       </article>
@@ -53,7 +53,7 @@
         <img src="images/blocky_piratas.jpeg">
         <div class="space">
           <h2>BLOCKY PIRATAS - 100 Pcs - 01-0637</h2>
-          <p>Precio: $ 1.000<br>
+          <p>Precio: <b>$ 1.000</b><br>
           Entrega: Inmediata</p>
         </div>
       </article>
@@ -62,8 +62,8 @@
         <img src="images/camarero.jpeg">
         <div class="space">
           <h2>EL CAMARERO - Un juego de Maldon</h2>
-          <p>Precio: $ 3.500<br>
-          Entrega: Inmediata</p>
+          <p>Precio: <b>$ 3.500</b><br>
+          Entrega: Inmediata</b></p>
         </div>
       </article>
 
@@ -71,7 +71,7 @@
         <img src="images/chanchitos.jpeg">
         <div class="space">
           <h2>LOS CHANCHITOS CONSTRUCTORES</h2>
-          <p>Precio: $ 2.500<br>
+          <p>Precio: <b>$ 2.500</b><br>
           Entrega: Inmediata</p>
         </div>
       </article>
@@ -80,7 +80,7 @@
         <img src="images/lego_city.jpeg">
         <div class="space">
           <h2>LEGO CITY - Police - 80 piezas - Starter Set 60136 Building Kit</h2>
-          <p>Precio: $ 8.000<br>
+          <p>Precio: <b>$ 8.000</b><br>
           Entrega: Inmediata</p>
         </div>
       </article>
@@ -89,18 +89,16 @@
         <img src="images/te_conozco.jpeg">
         <div class="space">
           <h2>TE CONOZCO? - ¿cuales son tus verdaderos colores? - SELLADO - SIN USO</h2>
-          <p>Precio: $ 2.000<br>
+          <p>Precio: <b>$ 2.000</b><br>
           Entrega: Inmediata</p>
         </div>
       </article>
-
-    </section>
 
       <article class="module module-third module-kiwi">
         <img src="images/zanahorias.jpeg">
         <div class="space">
           <h2>ZANAHORIAS - Mi primer juego de suma y resta</h2>
-          <p>Precio: $ 1.000<br>
+          <p>Precio: <b>$ 1.000</b><br>
           Entrega: Inmediata</p>
         </div>
       </article>
@@ -109,7 +107,7 @@
         <img src="images/plato_giratorio.jpeg">
         <div class="space">
           <h2>PLATO DE PRESENTACION GIRATORIO PARA TORTA - 35cm</h2>
-          <p>Precio: $ 3.000<br>
+          <p>Precio: <b>$ 3.000</b><br>
           Entrega: Inmediata</p>
         </div>
       </article>
@@ -118,7 +116,7 @@
         <img src="images/sandwichera.jpeg">
         <div class="space">
           <h2>SANDWICHERA PHILIPS - Con superficie antiadherente - 700w</h2>
-          <p>Precio: $ 4.000<br>
+          <p>Precio: <b>$ 4.000</b><br>
           Entrega: Inmediata</p>
         </div>
       </article>
@@ -127,7 +125,7 @@
         <img src="images/vajilla_china.jpeg">
         <div class="space">
           <h2>VAJILLA CHINA DE PORCELANA</h2>
-          <p>Precio: $ 5.000<br>
+          <p>Precio: <b>$ 5.000</b><br>
           Entrega: Inmediata</p>
         </div>
       </article>
@@ -136,10 +134,15 @@
         <img src="images/vasos_durax.jpeg">
         <div class="space">
           <h2>VASOS DURAX - 6 UNIDADES</h2>
-          <p>Precio: $ 1.000<br>
+          <p>Precio: <b>$ 1.000</b><br>
           Entrega: Inmediata</p>
         </div>
       </article>
+
+
+
+
+    </section>
 
   </div>
 
