--- a/startrek/index.html
+++ b/startrek/index.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Star Trek Image Gallery</title>
-	<link rel="stylesheet" href="style.css">
+	<title>Star Trek: The Next Generation Image Gallery</title>
+	<link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
 	<header>
-		<h1>Star Trek Image Gallery</h1>
+		<h1>Star Trek: The Next Generation Image Gallery</h1>
 	</header>
 	<main>
 		<div class="gallery">
-			<img src="https://vignette.wikia.nocookie.net/memoryalpha/images/6/62/USS_Enterprise_%28NCC-1701-A%29%2C_2293.jpg/revision/latest?cb=20060629151016&path-prefix=en" alt="USS Enterprise NCC-1701-A">
-			<img src="https://vignette.wikia.nocookie.net/memoryalpha/images/e/e9/Spock%2C_2267.jpg/revision/latest?cb=20170720021610&path-prefix=en" alt="Spock">
-			<img src="https://vignette.wikia.nocookie.net/memoryalpha/images/7/7e/USS_Defiant%2C_mirror%2C_2371.jpg/revision/latest?cb=20170821174127&path-prefix=en" alt="USS Defiant (mirror)">
-			<img src="https://vignette.wikia.nocookie.net/memoryalpha/images/c/c6/Seven_of_Nine%2C_2378.jpg/revision/latest?cb=20160914202659&path-prefix=en" alt="Seven of Nine">
-			<img src="https://vignette.wikia.nocookie.net/memoryalpha/images/6/65/USS_Discovery%2C_2256.jpg/revision/latest?cb=20171016192209&path-prefix=en" alt="USS Discovery">
-			<img src="https://vignette.wikia.nocookie.net/memoryalpha/images/c/cf/Klingon_Bird-of-Prey%2C_2270s.jpg/revision/latest?cb=20130112152241&path-prefix=en" alt="Klingon Bird-of-Prey">
+			<img src="https://m.media-amazon.com/images/M/MV5BNTY1ZDcyZTktOGIyMy00ZTlkLWIyYTctMzI5MTc0NDM5ZmY0XkEyXkFqcGdeQXVyMTEwNDQ2NDc3._V1_UY268_CR3,0,182,268_AL_.jpg" alt="The Enterprise-D">
+			<img src="https://m.media-amazon.com/images/M/MV5BNzY0YjVjNTItMTQ2Ni00N2UzLWI0NzEtZDdlMTA4N2ZmYjYxXkEyXkFqcGdeQXVyMTExMTYxMjc1._V1_UX182_CR0,0,182,268_AL_.jpg" alt="Captain Jean-Luc Picard">
+			<img src="https://m.media-amazon.com/images/M/MV5BYzQ2ODU2OTgtMmIyMC00MDQ2LWE2ZDgtMjE3NTM3NGI0MTI1XkEyXkFqcGdeQXVyMTAwMjUyNDc1._V1_UY268_CR3,0,182,268_AL_.jpg" alt="Commander William T. Riker">
+			<img src="https://m.media-amazon.com/images/M/MV5BMTg5Mzg5OTU0M15BMl5BanBnXkFtZTYwMjUyNzE3._V1_UY268_CR4,0,182,268_AL_.jpg" alt="Lt. Commander Data">
+			<img src="https://m.media-amazon.com/images/M/MV5BMGZiMzA3NTYtMmFmZi00MjAzLWEwODgtMTZkMjA0MmZjOGY1XkEyXkFqcGdeQXVyMTAzMTMwNDI2._V1_UY268_CR9,0,182,268_AL_.jpg" alt="Lt. Worf">
+			<img src="https://m.media-amazon.com/images/M/MV5BNjE3NzU0MzctNzJhYS00YjViLWI4NTctODU1ZWI4YTM4OWQ5XkEyXkFqcGdeQXVyMTAzMTMwNDI2._V1_UY268_CR5,0,182,268_AL_.jpg" alt="Counselor Deanna Troi">
 		</div>
 	</main>
 	<footer>
