--- a/venta/index.html
+++ b/venta/index.html
@@ -139,7 +139,17 @@
         </div>
       </article>
 
-
+      <div class="tile">
+        <div class="tile-content">
+          <h3 class="tile-title">TEST 1</h3>
+          <div class="photos-container">
+            <img src="images/vasos_durax.jpeg">
+            <img src="images/vajilla_china.jpeg">
+            <img src="images/sandwichera.jpeg">
+          </div>
+          <p class="tile-description">Description 1</p>
+        </div>
+      </div>
 
 
     </section>
