--- a/venta/index.html
+++ b/venta/index.html
@@ -139,18 +139,16 @@
         </div>
       </article>
 
-      <div class="tile">
-        <div class="tile-content">
-          <h3 class="tile-title">TEST 1</h3>
-          <div class="photos-container">
-            <img src="images/vasos_durax.jpeg">
-            <img src="images/vajilla_china.jpeg">
-            <img src="images/sandwichera.jpeg">
-          </div>
-          <p class="tile-description">Description 1</p>
+      <article class="module module-third module-kiwi">
+        <img src="images/vasos_durax.jpeg">
+	<img src="images/vajilla_china.jpeg">
+	<img src="images/sandwichera.jpeg">
+        <div class="space">
+          <h2>PRUEBAAAAAA</h2>
+          <p>Precio: <b>$ 10.000.000</b><br>
+          Entrega: Inmediata</p>
         </div>
-      </div>
-
+      </article>
 
     </section>
 
