--- a/venta/index_3.html
+++ b/venta/index_3.html
@@ -8,18 +8,16 @@
 <h2 class="w3-center">Manual Slideshow</h2>
 
 <div class="w3-content w3-display-container">
-  <img class="mySlides1" src="img_snowtops.jpg" style="width:100%">
-  <img class="mySlides1" src="img_lights.jpg" style="width:100%">
-  <img class="mySlides1" src="img_mountains.jpg" style="width:100%">
-  <img class="mySlides1" src="img_forest.jpg" style="width:100%">
+  <img class="mySlides1" src="bici_grande_1.jpeg" style="width:100%">
+  <img class="mySlides1" src="bici_grande_2.jpeg" style="width:100%">
   <button class="w3-button w3-black w3-display-left" onclick="plusDivs(-1, 0)">&#10094;</button>
   <button class="w3-button w3-black w3-display-right" onclick="plusDivs(1, 0)">&#10095;</button>
 </div>
 
 <div class="w3-content w3-display-container">
-  <img class="mySlides2" src="img_la.jpg" style="width:100%">
-  <img class="mySlides2" src="img_ny.jpg" style="width:100%">
-  <img class="mySlides2" src="img_chicago.jpg" style="width:100%">
+  <img class="mySlides2" src="images/plato_giratorio.jpeg" style="width:100%">
+  <img class="mySlides2" src="images/sandwichera.jpeg" style="width:100%">
+  <img class="mySlides2" src="images/zanahorias.jpeg" style="width:100%">
   <button class="w3-button w3-black w3-display-left" onclick="plusDivs(-1, 1)">&#10094;</button>
   <button class="w3-button w3-black w3-display-right" onclick="plusDivs(1, 1)">&#10095;</button>
 </div>
