--- a/venta/index_3.html
+++ b/venta/index_3.html
@@ -8,8 +8,8 @@
 <h2 class="w3-center">Manual Slideshow</h2>
 
 <div class="w3-content w3-display-container">
-  <img class="mySlides1" src="bici_grande_1.jpeg" style="width:100%">
-  <img class="mySlides1" src="bici_grande_2.jpeg" style="width:100%">
+  <img class="mySlides1" src="images/bici_grande_1.jpeg" style="width:100%">
+  <img class="mySlides1" src="images/bici_grande_2.jpeg" style="width:100%">
   <button class="w3-button w3-black w3-display-left" onclick="plusDivs(-1, 0)">&#10094;</button>
   <button class="w3-button w3-black w3-display-right" onclick="plusDivs(1, 0)">&#10095;</button>
 </div>
