--- a/venta/index.html
+++ b/venta/index.html
@@ -241,7 +241,7 @@
         </div>
         <div class="space">
           <h2>TV Sanyo LCD 24" - LCD-24XH7</h2>
-          <p>Precio: <b>$ </b><br>
+          <p>Precio: <b>$ 24.000</b><br>
           Entrega: Inmediata</p>
         </div>
       </article>
@@ -254,7 +254,7 @@
         </div>
         <div class="space">
           <h2>TV Philips 42" LCD - 42PFL3403/77</h2>
-          <p>Precio: <b>$ </b><br>
+          <p>Precio: <b>$ 35.000</b><br>
           Entrega: Inmediata</p>
         </div>
       </article>
