Improved images size

--- a/venta/index.html
+++ b/venta/index.html
@@ -29,15 +29,11 @@
 
     <header class="site-header">
 
-      <h1><b>NOS MUDAMOS!!</b></h1>
+      <h1><b>NOS MUDAMOS y VENDEMOS TODO !!!</b></h1>
 
     </header>
 
     <section class="main-content">
-
-      <article class="module module-third module-intro">
-        <p><strong>Nos mudamos y vendemos de todo!</strong></p>
-      </article>
 
       <article class="module module-third module-kiwi">
         <img src="images/9_pistas.jpeg">
