--- a/venta/index.html
+++ b/venta/index.html
@@ -5,6 +5,7 @@
 
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width">
+  <meta http-equiv="Permissions-Policy" content="interest-cohort=()">
 
   <title>Venta</title>
 
