--- a/venta/index.html
+++ b/venta/index.html
@@ -5,11 +5,10 @@
 
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width">
-  <meta http-equiv="Permissions-Policy" content="interest-cohort=()">
 
   <title>Venta</title>
 
-  <script src="//use.typekit.net/exu3mfi.js"></script>
+  <script src="https://use.typekit.net/exu3mfi.js"></script>
   <script>try{Typekit.load();}catch(e){}</script>
 
   <link rel="stylesheet" href="css/global.css">
@@ -37,16 +36,16 @@
     <section class="main-content">
 
       <article class="module module-third module-kiwi">
-        <img src="images/9_pistas.jpeg">
+        <img src="images/9_pistas.jpeg" alt="">
         <div class="space">
-          <h2>9 pistas - Piensa rápido y descubre el misterio</h2>
+          <h2>9 pistas - Piensa rapido y descubre el misterio</h2>
 	  <p>Precio: <b>$ 1.700</b><br>
 	  Entrega: Inmediata</p>
         </div>
       </article>
 
       <article class="module module-third module-kiwi">
-        <img src="images/arma_mec.jpeg">
+        <img src="images/arma_mec.jpeg" alt="">
         <div class="space">
           <h2>ARMAMEC CONCEPT 8 - 230 piezas</h2>
           <p>Precio: <b>$ 5.000</b><br>
@@ -55,7 +54,7 @@
       </article>
 
       <article class="module module-third module-kiwi">
-        <img src="images/blocky_piratas.jpeg">
+        <img src="images/blocky_piratas.jpeg" alt="">
         <div class="space">
           <h2>BLOCKY PIRATAS - 100 Pcs - 01-0637</h2>
           <p>Precio: <b>$ 1.000</b><br>
@@ -64,16 +63,16 @@
       </article>
 
       <article class="module module-third module-kiwi">
-        <img src="images/camarero.jpeg">
+        <img src="images/camarero.jpeg" alt="">
         <div class="space">
           <h2>EL CAMARERO - Un juego de Maldon</h2>
           <p>Precio: <b>$ 3.500</b><br>
-          Entrega: Inmediata</b></p>
+          Entrega: Inmediata</p>
         </div>
       </article>
 
       <article class="module module-third module-kiwi">
-        <img src="images/chanchitos.jpeg">
+        <img src="images/chanchitos.jpeg" alt="">
         <div class="space">
           <h2>LOS CHANCHITOS CONSTRUCTORES</h2>
           <p>Precio: <b>$ 2.500</b><br>
@@ -82,7 +81,7 @@
       </article>
 
       <article class="module module-third module-kiwi">
-        <img src="images/lego_city.jpeg">
+        <img src="images/lego_city.jpeg" alt="">
         <div class="space">
           <h2>LEGO CITY - Police - 80 piezas - Starter Set 60136 Building Kit</h2>
           <p>Precio: <b>$ 8.000</b><br>
@@ -91,7 +90,7 @@
       </article>
 
       <article class="module module-third module-kiwi">
-        <img src="images/te_conozco.jpeg">
+        <img src="images/te_conozco.jpeg" alt="">
         <div class="space">
           <h2>TE CONOZCO? - ¿cuales son tus verdaderos colores? - SELLADO - SIN USO</h2>
           <p>Precio: <b>$ 2.000</b><br>
@@ -100,7 +99,7 @@
       </article>
 
       <article class="module module-third module-kiwi">
-        <img src="images/zanahorias.jpeg">
+        <img src="images/zanahorias.jpeg" alt="">
         <div class="space">
           <h2>ZANAHORIAS - Mi primer juego de suma y resta</h2>
           <p>Precio: <b>$ 1.000</b><br>
@@ -109,7 +108,7 @@
       </article>
 
       <article class="module module-third module-kiwi">
-        <img src="images/plato_giratorio.jpeg">
+        <img src="images/plato_giratorio.jpeg" alt="">
         <div class="space">
           <h2>PLATO DE PRESENTACION GIRATORIO PARA TORTA - 35cm</h2>
           <p>Precio: <b>$ 3.000</b><br>
@@ -118,7 +117,7 @@
       </article>
 
       <article class="module module-third module-kiwi">
-        <img src="images/sandwichera.jpeg">
+        <img src="images/sandwichera.jpeg" alt="">
         <div class="space">
           <h2>SANDWICHERA PHILIPS - Con superficie antiadherente - 700w</h2>
           <p>Precio: <b>$ 4.000</b><br>
@@ -127,7 +126,7 @@
       </article>
 
       <article class="module module-third module-kiwi">
-        <img src="images/vajilla_china.jpeg">
+        <img src="images/vajilla_china.jpeg" alt="">
         <div class="space">
           <h2>VAJILLA CHINA DE PORCELANA</h2>
           <p>Precio: <b>$ 5.000</b><br>
@@ -136,7 +135,7 @@
       </article>
 
       <article class="module module-third module-kiwi">
-        <img src="images/vasos_durax.jpeg">
+        <img src="images/vasos_durax.jpeg" alt="">
         <div class="space">
           <h2>VASOS DURAX - 6 UNIDADES</h2>
           <p>Precio: <b>$ 1.000</b><br>
@@ -146,8 +145,8 @@
 
       <article class="module module-third module-kiwi">
         <div class="image-slider">
-          <img src="images/bici_grande_1.jpeg">
-          <img src="images/bici_grande_2.jpeg">
+          <img src="images/bici_grande_1.jpeg" alt="">
+          <img src="images/bici_grande_2.jpeg" alt="">
         </div>
         <div class="space">
           <h2>Bicicleta Rodado 24 - Negra y Verde - Olmo Mint</h2>
@@ -158,8 +157,8 @@
 
       <article class="module module-third module-kiwi">
         <div class="image-slider">
-          <img src="images/bici_chica_1.jpeg">
-          <img src="images/bici_chica_2.jpeg">
+          <img src="images/bici_chica_1.jpeg" alt="">
+          <img src="images/bici_chica_2.jpeg" alt="">
         </div>
         <div class="space">
           <h2>Bicicleta Rodado 16 - Azul - Reynolds - Triban</h2>
@@ -170,9 +169,9 @@
 
       <article class="module module-third module-kiwi">
         <div class="image-slider">
-          <img src="images/balanza_1.jpeg">
-          <img src="images/balanza_2.jpeg">
-          <img src="images/balanza_3.jpeg">
+          <img src="images/balanza_1.jpeg" alt="">
+          <img src="images/balanza_2.jpeg" alt="">
+          <img src="images/balanza_3.jpeg" alt="">
         </div>
         <div class="space">
           <h2>Balanza Personal - NICTOM - Conexion a Smartphone</h2>
@@ -183,9 +182,9 @@
 
       <article class="module module-third module-kiwi">
         <div class="image-slider">
-          <img src="images/monopatin_1.jpeg">
-          <img src="images/monopatin_2.jpeg">
-          <img src="images/monopatin_3.jpeg">
+          <img src="images/monopatin_1.jpeg" alt="">
+          <img src="images/monopatin_2.jpeg" alt="">
+          <img src="images/monopatin_3.jpeg" alt="">
         </div>
         <div class="space">
           <h2>Monopatin Sieteveinte Glow - Metalico</h2>
@@ -196,8 +195,8 @@
 
       <article class="module module-third module-kiwi">
         <div class="image-slider">
-          <img src="images/pastalinda_1.jpeg">
-          <img src="images/pastalinda_2.jpeg">
+          <img src="images/pastalinda_1.jpeg" alt="">
+          <img src="images/pastalinda_2.jpeg" alt="">
         </div>
         <div class="space">
           <h2>Pastalinda - Fabrica de Pasta - Morris - MO-013</h2>
@@ -207,7 +206,7 @@
       </article>
 
       <article class="module module-third module-kiwi">
-        <img src="images/ps5.jpeg">
+        <img src="images/ps5.jpeg" alt="">
         <div class="space">
           <h2>Sony PS5 Standard (CFI-1115A) + Joystick inalámbrico Sony PlayStation DualSense Original Galactic Purple (CFI-ZCT1)</h2>
           <p>NOTA: Son 2 controles, el original mas uno extra Galactic Purple<br>
@@ -219,9 +218,9 @@
 
       <article class="module module-third module-kiwi">
         <div class="image-slider">
-          <img src="images/skate_1.jpeg">
-          <img src="images/skate_2.jpeg">
-          <img src="images/skate_3.jpeg">
+          <img src="images/skate_1.jpeg" alt="">
+          <img src="images/skate_2.jpeg" alt="">
+          <img src="images/skate_3.jpeg" alt="">
         </div>
         <div class="space">
           <h2>Skate - 59cm x 15cm - Sin Lija - Hasta 45kg</h2>
@@ -232,9 +231,9 @@
 
       <article class="module module-third module-kiwi">
         <div class="image-slider">
-          <img src="images/tv24_1.jpeg">
-          <img src="images/tv24_2.jpeg">
-          <img src="images/tv24_3.jpeg">
+          <img src="images/tv24_1.jpeg" alt="">
+          <img src="images/tv24_2.jpeg" alt="">
+          <img src="images/tv24_3.jpeg" alt="">
         </div>
         <div class="space">
           <h2>TV Sanyo LCD 24" - LCD-24XH7</h2>
@@ -245,9 +244,9 @@
 
       <article class="module module-third module-kiwi">
         <div class="image-slider">
-          <img src="images/tv42_1.jpeg">
-          <img src="images/tv42_2.jpeg">
-          <img src="images/tv42_3.jpeg">
+          <img src="images/tv42_1.jpeg" alt="">
+          <img src="images/tv42_2.jpeg" alt="">
+          <img src="images/tv42_3.jpeg" alt="">
         </div>
         <div class="space">
           <h2>TV Philips 42" LCD - 42PFL3403/77</h2>
