--- a/venta/index_2.html
+++ b/venta/index_2.html
@@ -8,7 +8,7 @@
 
   <title>Venta</title>
 
-  <script src="//use.typekit.net/exu3mfi.js"></script>
+  <script src="https://use.typekit.net/exu3mfi.js"></script>
   <script>try{Typekit.load();}catch(e){}</script>
 
   <link rel="stylesheet" href="css/global.css">
@@ -36,9 +36,9 @@
     <section class="main-content">
 
       <article class="module module-third module-kiwi">
-        <img src="images/9_pistas.jpeg">
+        <img src="images/9_pistas.jpeg" alt="">
         <div class="space">
-          <h2>9 pistas - Piensa rápido y descubre el misterio</h2>
+          <h2>9 pistas - Piensa rapido y descubre el misterio</h2>
 	  <p>Precio: <b>$ 1.700</b><br>
 	  Entrega: Inmediata</p>
         </div>
@@ -46,8 +46,8 @@
 
       <article class="module module-third module-kiwi">
         <div class="image-slider">
-          <img src="images/bici_grande_1.jpeg">
-          <img src="images/bici_grande_2.jpeg">
+          <img src="images/bici_grande_1.jpeg" alt="">
+          <img src="images/bici_grande_2.jpeg" alt="">
         </div>
         <div class="space">
           <h2>Bicicleta Rodado 24 - Negra y Verde - Olmo Mint</h2>
