--- a/venta/index.html
+++ b/venta/index.html
@@ -6,7 +6,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width">
 
-  <title>Venta</title>
+  <title>Vendemos todo por mudanza</title>
 
   <script src="https://use.typekit.net/exu3mfi.js"></script>
   <script>try{Typekit.load();}catch(e){}</script>
